# unical-RS

./: .gitignore  dspace_auth.py  extract_tokens.py  pyproject.toml  seed.py
migrations/: env.py
migrations/versions/: 488396c4078d_added_group_id_to_role_table_for_dspace_.py  bc5ccec0d809_inital.py
src/: main.py
src/utils/: config.py  db.py  exception.py  http_config.py  log.py  redis.py  redis_client.py  response.py
src/v1/admin/: route.py  schema.py  service.py
src/v1/auth/: auth.py  route.py  schema.py  service.py
src/v1/base/: exception.py  model.py  schema.py
src/v1/dspace/: client.py  route.py  schema.py  service.py
src/v1/dspace/dspace_auth/: auth.py  route.py  service.py
src/v1/model/: __init__.py  roles.py  users.py
src/v1/schema/: auth.py
src/v1/service/: user_service.py
